--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "Project template for a Rust library."
 homepage = "https://github.com/flowscripter"
 license = "MIT"
 repository = "https://github.com/flowscripter/template-rust-library"
+exclude = [".github/"]
 
 [lib]
 crate-type = ["lib"]
