--- a/.github/workflows/lint-pr-message.yml
+++ b/.github/workflows/lint-pr-message.yml
@@ -9,6 +9,4 @@ jobs:
   lint-pr:
     runs-on: ubuntu-latest
     steps:
-      - uses: amannn/action-semantic-pull-request@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: flowscripter/.github/actions/lint-pr-message@v1
