--- a/.github/workflows/release-rust-library.yml
+++ b/.github/workflows/release-rust-library.yml
@@ -11,10 +11,14 @@ jobs:
     steps:
       - name: Test Rust
         uses: flowscripter/.github/actions/run-rust-tests@v1
+        with:
+          codecov-token: ${{ secrets.CODECOV_TOKEN }}
   release:
     runs-on: ubuntu-latest
     needs:
       - test
+    permissions:
+      contents: write
     steps:
       - name: Release Rust
         uses: flowscripter/.github/actions/release-rust-library@v1
