--- a/.github/workflows/lint-pr-message.yml
+++ b/.github/workflows/lint-pr-message.yml
@@ -6,7 +6,6 @@ on:
       - edited
       - synchronize
 jobs:
-  lint-pr:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: flowscripter/.github/actions/lint-pr-message@v1
+  call-lint-pr-message:
+    uses: flowscripter/.github/.github/workflows/lint-pr-message.yml@v1
+    secrets: inherit
